2012-11-11  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] find-definition.3): Mark as expected to fail.
	([test] arglist): Adjust regexp so that CCL passes.
	(slime-execute-tests): Insert summary table at the the end.
	(slime-check): Don't change counters here, as that would count
	multiple times per test.  Instead to the counting in
	slime-execute-tests.

2012-11-11  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (ldb-code-to-src-loc): Scan backward to the
	first code point with a non-nil start-char.
	(frame-package): Also match for ((:internal foo ...)).

2012-11-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-timer-call): Use debug marker in
	condition-case.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* slime.el (find-definition.3): Fix syntax.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (condition-message): New. Binds *print-cirlce.
	(safe-condition-message): Move binding of printer vars to
	condition-message.
	(*sldb-condition-printer*): Set it to #'condition-message.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (frame-source-location, ldb-code-to-src-loc):
	Use function-source-location for some cases that used to cause
	errors.
	(frame-package): New.
	(format-sldb-condition, call-with-syntax-hooks): Deleted. Did just
	the same as the default implementation.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] find-definition): Test defstruct and defvar.
	([test] find-definition.3): New.

2012-10-30  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (dd-location): Use info db as fallback.
	(struct-constructor): Return the name not the function.

2012-10-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el (report-condition-with-circular-list): New test.
	* swank.lisp (safe-condition-message): Bind *print-length* and
	truncate the string after 64KB.

2012-10-20  Stas Boukarev  <stassats@gmail.com>
