@@ -1,3 +1,9 @@
+2012-11-11  Stas Boukarev  <stassats@gmail.com>
+
+	* swank.lisp (interrupt-worker-thread): Solve *send-counter*
+	binding problem.
+	find-worker-thread: Merge with `thread-for-evaluation'.
+
 2012-11-11  Helmut Eller  <heller@common-lisp.net>
 
 	* slime.el ([test] find-definition.3): Mark as expected to fail.
